<resources>
    <string name="app_name">UKLProject</string>
    <string name="nama_barang">Nama Sepatu</string>
    <string name="harga">harga</string>
    <string name="airjordan">Air Jordan</string>
    <string name="ladies">Ladies</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrasi">registrasi</string>
    <string name="tab_text_1">SIGN UP</string>
    <string name="tab_text_2">PROFIL</string>
    <string name="Nama">Nama</string>
    <string name="Email">Email</string>
    <string name="TglLahir">Tgl Lahir</string>
    <string name="name">Nama</string>
</resources>