<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/gloock_regular"
        android:text="@string/airjordan"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ladies"
        android:textColor="@color/black"
        android:fontFamily="@font/edutas"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="115dp"
        android:layout_marginLeft="70dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        style="@style/button"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_info"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        style="@style/button"
        android:id="@+id/btnLogin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="450dp"/>

    <Button
        style="@style/button"
        android:id="@+id/btnLogin2"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/registrasi"
        android:textColor="@color/black"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="510dp"/>




</RelativeLayout>